--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1258,7 +1258,7 @@ section.lazy-placeholder:after {
 .cid-rL064yH0Nm {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #25aab2, #25aab2);
+  background: linear-gradient(45deg, #e4d295, #25aab2);
 }
 .cid-rL064yH0Nm .btn {
   margin: 0 0 .5rem 0;
