--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1428,92 +1428,28 @@ section.lazy-placeholder:after {
 .cid-rL0pyv35J6 .card-title {
   color: #767676;
 }
-.cid-rL7haQpVhv {
+.cid-rL8xr6PXbw {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #25aab2;
+  background-color: #e4d295;
+  background: linear-gradient(45deg, #e4d295, #25aab2);
 }
-.cid-rL7haQpVhv .mbr-text {
-  color: #efefef;
-  margin: 0;
-  padding-top: 1.5rem;
-  text-align: left;
-}
-.cid-rL7haQpVhv div.b {
-  padding-top: 2rem;
-}
-.cid-rL7haQpVhv H2 {
+.cid-rL8xr6PXbw .mbr-section-subtitle {
   color: #ffffff;
 }
-.cid-rL7haQpVhv H5 {
+.cid-rL8xr6PXbw .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rL8xr6PXbw H2 {
   color: #ffffff;
 }
-.cid-rKZL1RQ3cz {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #25aab2;
+.cid-rL8zNRshtJ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
 }
-@media (max-width: 767px) {
-  .cid-rKZL1RQ3cz .media-wrap {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-rKZL1RQ3cz .media-wrap .mbr-iconfont-logo {
-  font-size: 7rem;
-  color: #f36;
-}
-.cid-rKZL1RQ3cz .media-wrap img {
-  height: 6rem;
-}
-.cid-rKZL1RQ3cz .mbr-text {
-  color: #767676;
-}
-@media (max-width: 767px) {
-  .cid-rKZL1RQ3cz .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-rKZL1RQ3cz .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #000;
-  opacity: .05;
-}
-.cid-rKZL1RQ3cz .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-}
-.cid-rKZL1RQ3cz .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #232323;
-}
-.cid-rKZL1RQ3cz .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-rKZL1RQ3cz .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-rKZL1RQ3cz .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rKZL1RQ3cz .footer-lower .social-list {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-.cid-rKZL1RQ3cz .copyright > p {
-  color: #ffffff;
+.cid-rL8zNRshtJ .media-container-row .mbr-text {
+  color: #c1c1c1;
 }
 .cid-rL74C6aKyK {
   padding-top: 90px;
@@ -1928,4 +1864,12 @@ section.lazy-placeholder:after {
 .cid-rL7gEtUhBZ .nav-link:hover,
 .cid-rL7gEtUhBZ .dropdown-item:hover {
   color: #767676 !important;
+}
+.cid-rL8zNRshtJ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rL8zNRshtJ .media-container-row .mbr-text {
+  color: #c1c1c1;
 }
