--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -879,7 +879,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #232323;
 }
 .cid-rL7gEtUhBZ button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -956,6 +956,11 @@ section.lazy-placeholder:after {
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rL7gEtUhBZ .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-rL7gEtUhBZ .collapsed button.navbar-toggler {
   display: block;
@@ -1112,24 +1117,13 @@ section.lazy-placeholder:after {
 .cid-rL7gEtUhBZ .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-rL7kpGGeIP {
-  background-image: url("../../../assets/images/ines-alvarez-fdez-l-n7banlc5y-unsplash.jpg");
-}
-.cid-rL7kpGGeIP h1 {
-  color: #616161;
-}
-.cid-rL7kpGGeIP h2,
-.cid-rL7kpGGeIP h3,
-.cid-rL7kpGGeIP p {
-  color: #767676;
-}
-.cid-rL7kpGGeIP .mbr-section-subtitle {
-  font-style: italic;
+.cid-rLbhqOAG9V {
+  background: linear-gradient(45deg, #e4d295, #25aab2);
 }
 .cid-rL7l80GH9S {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #25aab2;
+  background-color: #ffffff;
 }
 .cid-rL7l80GH9S h2 {
   text-align: left;
@@ -1189,13 +1183,16 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rL7l80GH9S H4 {
-  color: #ffffff;
+  color: #616161;
 }
 .cid-rL7l80GH9S P {
-  color: #ffffff;
+  color: #616161;
 }
 .cid-rL7l80GH9S H2 {
-  color: #ffffff;
+  color: #616161;
+}
+.cid-rL7l80GH9S .mbr-text {
+  color: #616161;
 }
 .cid-rL0WyfLvqd {
   padding-top: 90px;
@@ -1632,7 +1629,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #232323;
 }
 .cid-rL7gEtUhBZ button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1709,6 +1706,11 @@ section.lazy-placeholder:after {
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rL7gEtUhBZ .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-rL7gEtUhBZ .collapsed button.navbar-toggler {
   display: block;
