--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1112,6 +1112,13 @@ section.lazy-placeholder:after {
 .cid-rLbhqOAG9V {
   background: linear-gradient(45deg, #e4d295, #25aab2);
 }
+.cid-rLbhqOAG9V H1 {
+  text-align: left;
+}
+.cid-rLbhqOAG9V .mbr-text,
+.cid-rLbhqOAG9V .mbr-section-btn {
+  text-align: left;
+}
 .cid-rL7l80GH9S {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1193,7 +1200,7 @@ section.lazy-placeholder:after {
 }
 .cid-rL0WyfLvqd .mbr-section-subtitle {
   color: #767676;
-  text-align: center;
+  text-align: left;
   font-weight: 300;
 }
 .cid-rL0WyfLvqd .step {
@@ -1209,25 +1216,14 @@ section.lazy-placeholder:after {
   .cid-rL0WyfLvqd .separline .step-wrapper {
     position: relative;
   }
-  .cid-rL0WyfLvqd .separline .step-wrapper:before,
   .cid-rL0WyfLvqd .separline .step-wrapper:after {
     top: 33px;
+    left: 66px;
     position: absolute;
     content: "";
     height: 2px;
-    width: calc(50% + 15px - 31px - 8px);
+    width: calc(100% + 30px - 8px - (31px  * 2));
     background-color: #efefef;
-  }
-  .cid-rL0WyfLvqd .separline .step-wrapper:before {
-    left: -15px;
-  }
-  .cid-rL0WyfLvqd .separline .step-wrapper:after {
-    left: calc(50% + 8px + 31px);
-  }
-  .cid-rL0WyfLvqd .separline.last-child .step-wrapper:after,
-  .cid-rL0WyfLvqd .separline:nth-child(3n) .step-wrapper:after,
-  .cid-rL0WyfLvqd .separline:nth-child(3n+1) .step-wrapper:before {
-    background: none;
   }
 }
 @media (max-width: 767px) {
@@ -1237,12 +1233,15 @@ section.lazy-placeholder:after {
 }
 .cid-rL0WyfLvqd .mbr-section-title {
   color: #767676;
+  text-align: left;
 }
 .cid-rL0WyfLvqd .mbr-step-title {
   color: #767676;
+  text-align: left;
 }
 .cid-rL0WyfLvqd .mbr-step-text {
   color: #767676;
+  text-align: left;
 }
 .cid-rL064yH0Nm {
   padding-top: 90px;
@@ -1439,6 +1438,7 @@ section.lazy-placeholder:after {
 }
 .cid-rL8zNRshtJ .media-container-row .mbr-text {
   color: #c1c1c1;
+  text-align: left;
 }
 .cid-rL74C6aKyK {
   padding-top: 120px;
@@ -1690,6 +1690,10 @@ section.lazy-placeholder:after {
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rL7gEtUhBZ .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1791,6 +1795,10 @@ section.lazy-placeholder:after {
   .cid-rL7gEtUhBZ .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-rL7gEtUhBZ .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rL7gEtUhBZ .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-rL7gEtUhBZ .navbar-collapse.collapsing .navbar-buttons,
   .cid-rL7gEtUhBZ .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1861,6 +1869,7 @@ section.lazy-placeholder:after {
 }
 .cid-rL8zNRshtJ .media-container-row .mbr-text {
   color: #c1c1c1;
+  text-align: left;
 }
 .cid-rL7gEtUhBZ .navbar {
   background: #ffffff;
@@ -2097,6 +2106,10 @@ section.lazy-placeholder:after {
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rL7gEtUhBZ .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rL7gEtUhBZ .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2198,6 +2211,10 @@ section.lazy-placeholder:after {
   .cid-rL7gEtUhBZ .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-rL7gEtUhBZ .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rL7gEtUhBZ .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-rL7gEtUhBZ .navbar-collapse.collapsing .navbar-buttons,
   .cid-rL7gEtUhBZ .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -2281,4 +2298,5 @@ section.lazy-placeholder:after {
 }
 .cid-rL8zNRshtJ .media-container-row .mbr-text {
   color: #c1c1c1;
+  text-align: left;
 }
