create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1435,7 +1435,7 @@ section.lazy-placeholder:after {
 }
 .cid-rL8zNRshtJ .media-container-row .mbr-text {
   color: #c1c1c1;
-  text-align: left;
+  text-align: center;
 }
 .cid-rL74C6aKyK {
   padding-top: 120px;
@@ -1459,7 +1459,7 @@ section.lazy-placeholder:after {
 }
 .cid-rL8zNRshtJ .media-container-row .mbr-text {
   color: #c1c1c1;
-  text-align: left;
+  text-align: center;
 }
 .cid-rLbDdgYCwX .navbar {
   padding: .5rem 0;
@@ -1880,7 +1880,7 @@ section.lazy-placeholder:after {
 }
 .cid-rL8zNRshtJ .media-container-row .mbr-text {
   color: #c1c1c1;
-  text-align: left;
+  text-align: center;
 }
 .cid-rLbDdgYCwX .navbar {
   padding: .5rem 0;
