--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1109,9 +1109,6 @@ section.lazy-placeholder:after {
 .cid-rLbDdgYCwX .dropdown-item:hover {
   color: #616161 !important;
 }
-.cid-rLbBrtQ8x7 {
-  background: linear-gradient(45deg, #e4d295, #25aab2);
-}
 .cid-rLbBrtQ8x7 .mbr-section-subtitle {
   font-style: italic;
   letter-spacing: 1rem;
@@ -1444,8 +1441,7 @@ section.lazy-placeholder:after {
 .cid-rL8xr6PXbw {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #e4d295;
-  background: linear-gradient(45deg, #e4d295, #25aab2);
+  background-color: #25aab2;
 }
 .cid-rL8xr6PXbw .mbr-section-subtitle {
   color: #ffffff;
