--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1832,7 +1832,7 @@ section.lazy-placeholder:after {
 }
 .cid-rLbDdgYCwX .nav-link:hover,
 .cid-rLbDdgYCwX .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #616161 !important;
 }
 .cid-rLbm1W6NBL {
   padding-top: 120px;
@@ -2253,5 +2253,5 @@ section.lazy-placeholder:after {
 }
 .cid-rLbDdgYCwX .nav-link:hover,
 .cid-rLbDdgYCwX .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #616161 !important;
 }
