--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -128,8 +128,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #cc2952 !important;
-  border-color: #cc2952 !important;
+  background-color: #e96188 !important;
+  border-color: #e96188 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
@@ -137,14 +137,14 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #8c1c38 !important;
-  border-color: #8c1c38 !important;
+  background-color: #df1f56 !important;
+  border-color: #df1f56 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #8c1c38 !important;
-  border-color: #8c1c38 !important;
+  background-color: #df1f56 !important;
+  border-color: #df1f56 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -292,22 +292,22 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #771830;
-  color: #771830;
+  border-color: #c81c4d;
+  color: #c81c4d;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #cc2952;
-  border-color: #cc2952;
+  background-color: #e96188;
+  border-color: #e96188;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #cc2952 !important;
-  border-color: #cc2952 !important;
+  background-color: #e96188 !important;
+  border-color: #e96188 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -427,7 +427,7 @@ body {
   color: #cc2952 !important;
 }
 .text-secondary {
-  color: #cc2952 !important;
+  color: #e96188 !important;
 }
 .text-success {
   color: #f7ed4a !important;
@@ -453,7 +453,7 @@ a.text-primary:focus {
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #771830 !important;
+  color: #c81c4d !important;
 }
 a.text-success:hover,
 a.text-success:focus {
@@ -682,7 +682,7 @@ blockquote {
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
   color: #ffffff !important;
-  background: #cc2952 !important;
+  background: #e96188 !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -712,12 +712,12 @@ section.lazy-placeholder:after {
 }
 .cid-rLbDdgYCwX .navbar {
   padding: .5rem 0;
-  background: #25aab2;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rLbDdgYCwX .navbar-dropdown.bg-color.transparent.opened {
-  background: #25aab2;
+  background: #ffffff;
 }
 .cid-rLbDdgYCwX a {
   font-style: normal;
@@ -808,7 +808,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rLbDdgYCwX .dropdown .dropdown-menu {
-  background: #25aab2;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -879,7 +879,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rLbDdgYCwX button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1109,110 +1109,73 @@ section.lazy-placeholder:after {
 .cid-rLbDdgYCwX .dropdown-item:hover {
   color: #616161 !important;
 }
-.cid-rLbBrtQ8x7 .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
-}
-.cid-rL7l80GH9S {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-rVX9PmVg1i {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-rL7l80GH9S h2 {
-  text-align: left;
-}
-.cid-rL7l80GH9S h4 {
-  text-align: left;
-  font-weight: 500;
-}
-.cid-rL7l80GH9S p {
-  color: #767676;
-  text-align: left;
-}
-.cid-rL7l80GH9S .aside-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-rL7l80GH9S .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  word-break: break-word;
-}
-.cid-rL7l80GH9S .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rL7l80GH9S .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rL7l80GH9S .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rL7l80GH9S .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rL7l80GH9S .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-rL7l80GH9S .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rL7l80GH9S .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rL7l80GH9S H4 {
-  color: #616161;
-}
-.cid-rL7l80GH9S P {
-  color: #616161;
-}
-.cid-rL7l80GH9S H2 {
-  color: #616161;
-}
-.cid-rL7l80GH9S .mbr-text {
-  color: #616161;
-}
-.cid-rMmbXGMeTk {
-  padding-top: 90px;
-  padding-bottom: 0px;
-  background-color: #efefef;
-}
-.cid-rMmbXGMeTk .mbr-section-subtitle {
+.cid-rVX9PmVg1i P {
   color: #767676;
 }
-.cid-rMmbXGMeTk .btn {
+.cid-rVX9PmVg1i H1 {
+  color: #232323;
+  text-align: left;
+}
+.cid-rVX9PmVg1i .mbr-text,
+.cid-rVX9PmVg1i .mbr-section-btn {
+  text-align: left;
+}
+.cid-rVXajASIRm {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rVXajASIRm .mbr-text {
+  color: #616161;
+  text-align: left;
+}
+.cid-rVXajASIRm h4 {
+  text-align: center;
+}
+.cid-rVXajASIRm p {
+  text-align: center;
+}
+.cid-rVXajASIRm .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
+.cid-rVXajASIRm .card-title,
+.cid-rVXajASIRm .card-img {
+  text-align: left;
+}
+#instagram-feed-block-2r .inst__title {
+  text-align: left;
+  color: #232323;
+}
+.cid-rVXnraNvm5 {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #25aab2;
+}
+.cid-rVXnraNvm5 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rVXnraNvm5 .btn {
   margin: 0 0 .5rem 0;
 }
-.cid-rMmbXGMeTk H2 {
-  color: #767676;
-  text-align: left;
+.cid-rVXnraNvm5 H2 {
+  color: #ffffff;
 }
 .cid-rQWCCJPA6e {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rQWCCJPA6e .card-img {
   background-color: #fff;
 }
 .cid-rQWCCJPA6e .card-box {
   padding: 2rem;
-  background-color: #ffffff;
 }
 .cid-rQWCCJPA6e h4 {
   font-weight: 500;
@@ -1242,17 +1205,19 @@ section.lazy-placeholder:after {
     -webkit-flex: 0 0 20%;
   }
 }
+.cid-rQWCCJPA6e .card-title {
+  text-align: center;
+}
 .cid-rQWF7RTaXU {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rQWF7RTaXU .card-img {
   background-color: #fff;
 }
 .cid-rQWF7RTaXU .card-box {
   padding: 2rem;
-  background-color: #ffffff;
 }
 .cid-rQWF7RTaXU h4 {
   font-weight: 500;
@@ -1282,17 +1247,59 @@ section.lazy-placeholder:after {
     -webkit-flex: 0 0 20%;
   }
 }
+.cid-rQWF7RTaXU .card-title {
+  text-align: center;
+}
+.cid-rVXd9rVBZE {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rVXd9rVBZE .card-img {
+  background-color: #fff;
+}
+.cid-rVXd9rVBZE .card-box {
+  padding: 2rem;
+  background-color: #ffffff;
+}
+.cid-rVXd9rVBZE h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rVXd9rVBZE p {
+  text-align: left;
+}
+.cid-rVXd9rVBZE .mbr-text {
+  color: #767676;
+}
+.cid-rVXd9rVBZE .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rVXd9rVBZE .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+@media (min-width: 992px) {
+  .cid-rVXd9rVBZE .my-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 15px;
+    -webkit-flex: 0 0 20%;
+  }
+}
 .cid-rQWFFnoZ0Z {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rQWFFnoZ0Z .card-img {
   background-color: #fff;
 }
 .cid-rQWFFnoZ0Z .card-box {
   padding: 2rem;
-  background-color: #ffffff;
 }
 .cid-rQWFFnoZ0Z h4 {
   font-weight: 500;
@@ -1327,16 +1334,29 @@ section.lazy-placeholder:after {
   padding-bottom: 90px;
   background: linear-gradient(45deg, #25aab2, #25aab2);
 }
+.cid-rL064yH0Nm .main {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-rL064yH0Nm .main .mbr-section-btn {
+  text-align: right;
+}
 .cid-rL064yH0Nm .btn {
   margin: 0 0 .5rem 0;
 }
+.cid-rL064yH0Nm H2 {
+  text-align: left;
+}
+.cid-rL064yH0Nm H3 {
+  text-align: left;
+}
 .cid-rMm5KdAxg9 {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #25aab2;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rMm5KdAxg9 .card-box {
-  background-color: #ffffff;
+  background-color: #efefef;
   padding: 2rem;
 }
 .cid-rMm5KdAxg9 h4 {
@@ -1371,12 +1391,12 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rMm6S9qcqd {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #25aab2;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rMm6S9qcqd .card-box {
-  background-color: #ffffff;
+  background-color: #efefef;
   padding: 2rem;
 }
 .cid-rMm6S9qcqd h4 {
@@ -1411,12 +1431,12 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rMm7CDHJdN {
-  padding-top: 30px;
+  padding-top: 0px;
   padding-bottom: 30px;
-  background-color: #25aab2;
+  background-color: #ffffff;
 }
 .cid-rMm7CDHJdN .card-box {
-  background-color: #ffffff;
+  background-color: #efefef;
   padding: 2rem;
 }
 .cid-rMm7CDHJdN h4 {
@@ -1496,12 +1516,12 @@ section.lazy-placeholder:after {
 }
 .cid-rLbDdgYCwX .navbar {
   padding: .5rem 0;
-  background: #25aab2;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rLbDdgYCwX .navbar-dropdown.bg-color.transparent.opened {
-  background: #25aab2;
+  background: #ffffff;
 }
 .cid-rLbDdgYCwX a {
   font-style: normal;
@@ -1592,7 +1612,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rLbDdgYCwX .dropdown .dropdown-menu {
-  background: #25aab2;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1663,7 +1683,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rLbDdgYCwX button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1917,12 +1937,12 @@ section.lazy-placeholder:after {
 }
 .cid-rLbDdgYCwX .navbar {
   padding: .5rem 0;
-  background: #25aab2;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-rLbDdgYCwX .navbar-dropdown.bg-color.transparent.opened {
-  background: #25aab2;
+  background: #ffffff;
 }
 .cid-rLbDdgYCwX a {
   font-style: normal;
@@ -2013,7 +2033,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rLbDdgYCwX .dropdown .dropdown-menu {
-  background: #25aab2;
+  background: #ffffff;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2084,7 +2104,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-rLbDdgYCwX button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
