--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1119,11 +1119,11 @@ section.lazy-placeholder:after {
 }
 .cid-rVX9PmVg1i H1 {
   color: #232323;
-  text-align: left;
+  text-align: center;
 }
 .cid-rVX9PmVg1i .mbr-text,
 .cid-rVX9PmVg1i .mbr-section-btn {
-  text-align: left;
+  text-align: center;
 }
 .cid-rVXajASIRm {
   padding-top: 60px;
@@ -1149,22 +1149,8 @@ section.lazy-placeholder:after {
   text-align: left;
 }
 #instagram-feed-block-2r .inst__title {
-  text-align: left;
+  text-align: center;
   color: #232323;
-}
-.cid-rVXnraNvm5 {
-  padding-top: 45px;
-  padding-bottom: 30px;
-  background-color: #25aab2;
-}
-.cid-rVXnraNvm5 .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rVXnraNvm5 .btn {
-  margin: 0 0 .5rem 0;
-}
-.cid-rVXnraNvm5 H2 {
-  color: #ffffff;
 }
 .cid-rQWCCJPA6e {
   padding-top: 0px;
