--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1152,6 +1152,14 @@ section.lazy-placeholder:after {
   text-align: center;
   color: #232323;
 }
+.cid-s9fUK6ZkxK {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s9fUK6ZkxK .mbr-section-subtitle {
+  color: #767676;
+}
 .cid-rQWCCJPA6e {
   padding-top: 0px;
   padding-bottom: 0px;
