create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -945,6 +945,10 @@ section.lazy-placeholder:after {
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rLbDdgYCwX .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1045,6 +1049,10 @@ section.lazy-placeholder:after {
   .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rLbDdgYCwX .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rLbDdgYCwX .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-buttons,
   .cid-rLbDdgYCwX .navbar-collapse.show .navbar-buttons {
@@ -1152,12 +1160,12 @@ section.lazy-placeholder:after {
   text-align: center;
   color: #232323;
 }
-.cid-s9fUK6ZkxK {
+.cid-s9fWxYNz4V {
   padding-top: 60px;
-  padding-bottom: 0px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-s9fUK6ZkxK .mbr-section-subtitle {
+.cid-s9fWxYNz4V .mbr-section-subtitle {
   color: #767676;
 }
 .cid-rQWCCJPA6e {
@@ -1322,144 +1330,6 @@ section.lazy-placeholder:after {
     padding: 15px;
     -webkit-flex: 0 0 20%;
   }
-}
-.cid-rL064yH0Nm {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background: linear-gradient(45deg, #25aab2, #25aab2);
-}
-.cid-rL064yH0Nm .main {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-.cid-rL064yH0Nm .main .mbr-section-btn {
-  text-align: right;
-}
-.cid-rL064yH0Nm .btn {
-  margin: 0 0 .5rem 0;
-}
-.cid-rL064yH0Nm H2 {
-  text-align: left;
-}
-.cid-rL064yH0Nm H3 {
-  text-align: left;
-}
-.cid-rMm5KdAxg9 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rMm5KdAxg9 .card-box {
-  background-color: #efefef;
-  padding: 2rem;
-}
-.cid-rMm5KdAxg9 h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-rMm5KdAxg9 p {
-  color: #767676;
-  text-align: left;
-}
-.cid-rMm5KdAxg9 .card-wrapper {
-  position: relative;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rMm5KdAxg9 .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-rMm5KdAxg9 .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-}
-.cid-rMm5KdAxg9 .card-title {
-  color: #767676;
-}
-.cid-rMm5KdAxg9 P {
-  color: #767676;
-}
-.cid-rMm6S9qcqd {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rMm6S9qcqd .card-box {
-  background-color: #efefef;
-  padding: 2rem;
-}
-.cid-rMm6S9qcqd h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-rMm6S9qcqd p {
-  color: #767676;
-  text-align: left;
-}
-.cid-rMm6S9qcqd .card-wrapper {
-  position: relative;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rMm6S9qcqd .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-rMm6S9qcqd .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-}
-.cid-rMm6S9qcqd .card-title {
-  color: #767676;
-}
-.cid-rMm6S9qcqd P {
-  color: #767676;
-}
-.cid-rMm7CDHJdN {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rMm7CDHJdN .card-box {
-  background-color: #efefef;
-  padding: 2rem;
-}
-.cid-rMm7CDHJdN h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-rMm7CDHJdN p {
-  color: #767676;
-  text-align: left;
-}
-.cid-rMm7CDHJdN .card-wrapper {
-  position: relative;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rMm7CDHJdN .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-rMm7CDHJdN .card-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-}
-.cid-rMm7CDHJdN .card-title {
-  color: #767676;
 }
 .cid-rL8xr6PXbw {
   padding-top: 90px;
@@ -1743,6 +1613,10 @@ section.lazy-placeholder:after {
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rLbDdgYCwX .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1843,6 +1717,10 @@ section.lazy-placeholder:after {
   .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rLbDdgYCwX .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rLbDdgYCwX .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-buttons,
   .cid-rLbDdgYCwX .navbar-collapse.show .navbar-buttons {
@@ -2164,6 +2042,10 @@ section.lazy-placeholder:after {
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rLbDdgYCwX .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rLbDdgYCwX .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2264,6 +2146,10 @@ section.lazy-placeholder:after {
   .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rLbDdgYCwX .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rLbDdgYCwX .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rLbDdgYCwX .navbar-collapse.collapsing .navbar-buttons,
   .cid-rLbDdgYCwX .navbar-collapse.show .navbar-buttons {
